--- a/package.json
+++ b/package.json
@@ -12,8 +12,7 @@
   "dependencies": {
     "axios": "^0.27.2",
     "ejs": "^3.1.8",
-    "express": "^4.18.1",
-    "node-fetch": "^2.6.7"
+    "express": "^4.18.1"
   },
   "devDependencies": {
     "dotenv": "^16.0.1",
