--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   "dependencies": {
     "axios": "^0.27.2",
     "ejs": "^3.1.8",
-    "express": "^4.18.1"
+    "express": "^4.18.1",
+    "serve-favicon": "^2.5.0"
   },
   "devDependencies": {
     "dotenv": "^16.0.1",
